k8s/gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app.kubernetes.io/name: gateway-service
    app.kubernetes.io/part-of: microservices-task
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - name: http
      port: 3003
      targetPort: http
      protocol: TCP
