k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app.kubernetes.io/name: order-service
    app.kubernetes.io/part-of: microservices-task
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - name: http
      port: 3002
      targetPort: http
      protocol: TCP
