k8s/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app.kubernetes.io/name: product-service
    app.kubernetes.io/part-of: microservices-task
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 3001
      targetPort: http
      protocol: TCP
